optimized aggregation for classification rules; running aggregation in background mode using SwingWorker